--- a/src/index.css
+++ b/src/index.css
@@ -180,37 +180,39 @@ a:hover {
 
 .details {
   display: flex;
-  justify-content: space-between;
+  justify-content: stretch;
   align-items: flex-start;
   flex-wrap: wrap;
-  padding: 1rem;
+  padding: 1rem 10rem;
 }
 
 .details-image {
-  flex: 2 1 60rem;
+  flex: 2 1 30rem;
 }
 
 .details-image img {
-  max-width: 60rem;
+  max-width: 40rem;
   width: 100%;
 }
 
 .details-info {
-  flex: 1 1 30rem;
+  flex: 1 1 70rem;
 }
 
 .details-action {
   flex: 1 30rem;
 }
 
-.details-info ul,
-.details-action ul {
+.details-image ul, .details-info ul {
   list-style-type: none;
   padding: 0;
 }
 
-.details-info li,
-.details-action li {
+.details-image li{
+  margin-bottom: 5rem;
+}
+
+.details-info li {
   margin-bottom: 1rem;
 }
 
@@ -256,65 +258,6 @@ a:hover {
 
 .text-center {
   text-align: center;
-}
-
-/* Cart */
-
-.cart {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 1rem;
-  align-items: flex-start;
-}
-
-.cart-list {
-  flex: 3 1 60rem;
-}
-
-.cart-list-container {
-  list-style-type: none;
-  padding: 1rem;
-}
-
-.cart-list-container li {
-  display: flex;
-  justify-content: space-between;
-
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
-  border-bottom: .1rem #c0c0c0 solid;
-}
-
-.cart-list-container li img {
-  max-width: 10rem;
-  max-height: 10rem;
-}
-
-.cart-list-container li:first-child {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.cart-action {
-  flex: 1 1 20rem;
-  background-color: #f8f8f8;
-  border-radius: .5rem;
-  padding: 1rem;
-}
-
-.cart-image {
-  flex: 1 1;
-}
-
-.cart-name {
-  flex: 8 1;
-}
-
-.cart-price {
-  flex: 1 1;
-  font-size: 2.5rem;
-  text-align: right;
 }
 
 .form {
@@ -438,6 +381,12 @@ input {
 
 .product-tableList {
   margin: 1rem;
+  padding: 1rem;
+}
+
+.product-tableList table img {
+  max-width: 10rem;
+  max-height: 10rem;
 }
 
 table {
